task16/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: clusterip-farrukh-ingres
  namespace: f-sadatov
spec:
  ingressClassName: nginx
  rules:
    - host: f-sadatov.sts404.uz
      http:
        paths:
          - backend:
              service:
                name: cluster-ip-service
                port:
                  number: 6234
            path: /check-ingress
            pathType: Exact
status:
  loadBalancer: {}
